FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Val_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Quote_Val_Bypass__c</fullName>
    <description>BOPI-581 Used to bypass validation rules when Flows are triggered. Works with Opp Bypass DateTime</description>
    <formula>Quote_Bypass_DateTime__c &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Admin field not for reporting. Used to bypass validation rules when Flows are triggered. Works with Opp Bypass DateTime</inlineHelpText>
    <label>Quote Val Bypass</label>
    <type>Checkbox</type>
</CustomField>