FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/QuoteLineGroupsPresent__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineGroupsPresent__c</fullName>
    <description>Created for SALDEV-1403, used for Quote document generation</description>
    <formula>IF(No_of_Quote_Line_Groups__c &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteLineGroupsPresent</label>
    <type>Checkbox</type>
</CustomField>