FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/QuoteLongId__c.field-meta.xml
<CustomField>
    <fullName>QuoteLongId__c</fullName>
    <description>Long ID for Quote Records</description>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteLongId</label>
    <type>Text</type>
</CustomField>