FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Requires_Exception_Pricing_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Exception_Pricing_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BOPI-624 Created to verify if a Quote should trigger the exception pricing approval rule. This field is filled by the QCP custom script</description>
    <label>Requires Exception Pricing Approval</label>
    <type>Checkbox</type>
</CustomField>