FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Requires_Revenue_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Revenue_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BOPI-624 Created to verify if an Opp should trigger the revenue approval rule. This field is filled by the QCP custom script</description>
    <label>Requires Revenue Approval</label>
    <type>Checkbox</type>
</CustomField>