FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BOPI-36 Ship To Account to add subsidiaries to &apos;parent&apos; contracts</description>
    <inlineHelpText>Equals the Opp Account, unless the Opp is contracted with a Partner, in which case it&apos;s the serviced Account</inlineHelpText>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Ship To Account)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>