FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDate__c</fullName>
    <description>Approval submission date of this quote. Populated via Advanced Approval apex.</description>
    <inlineHelpText>Approval submission date of this quote</inlineHelpText>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>