FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/SubmittedUser__c.field-meta.xml
<CustomField>
    <fullName>SubmittedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who submitted this quote for approval.  Populated via Advanced Approval apex.</description>
    <inlineHelpText>User who submitted this quote for approval</inlineHelpText>
    <label>Submitted User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AAE_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>