FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Surcharge_Pair__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Pair__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in QCP Logic.</description>
    <inlineHelpText>Used in QCP Logic.</inlineHelpText>
    <label>Surcharge Pair</label>
    <type>Checkbox</type>
</CustomField>