FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <description>Created from JIRA ticket: BOPI-227.</description>
    <label>Termination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>For Convenience</fullName>
            </value>
            <value>
                <fullName>For Cause Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>