FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Trigger_Amex_Line_Creation__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Amex_Line_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated via QCP</description>
    <inlineHelpText>Updated via QCP.</inlineHelpText>
    <label>Trigger Amex Line Creation</label>
    <type>Checkbox</type>
</CustomField>