FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Unique_Quote__c.field-meta.xml
<CustomField>
    <fullName>Unique_Quote__c</fullName>
    <description>To count unique Quotes on reports (power of one) by summarizing on this field.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To count unique Quotes on reports (power of one) by summarizing on this field.</inlineHelpText>
    <label>Unique Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>