FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Validation_Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Validation_Error_Details__c</fullName>
    <label>Validation Error Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>