FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>Used by product rules.

Created from JIRA ticket: BOPI-17</description>
    <formula>CASE( SBQQ__Opportunity2__r.RecordType.Name , &quot;Agents&quot;, &quot;Agents&quot;, &quot;B2B&quot;, &quot;B2B&quot;, &quot;Education&quot;, &quot;Education&quot;, &quot;Healthcare&quot;, &quot;Healthcare&quot;, &quot;Simplee Healthcare&quot;, &quot;Healthcare&quot;, &quot;Travel&quot;, &quot;Travel&quot;, &quot;&quot;)</formula>
    <inlineHelpText>Takes the Record Type from Opportunity and gives a value to the Quote</inlineHelpText>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>