FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/fields/Vertical_Text__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Text__c</fullName>
    <description>Stamped by flow to enable other price rules&apos; functionality</description>
    <label>Vertical (Text)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>