FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Custom_Quote.recordType-meta.xml
<RecordType>
    <fullName>Custom_Quote</fullName>
    <active>true</active>
    <description>Used for all status quotes</description>
    <label>Custom Quote</label>
</RecordType>