FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/validationRules/Account_cant_be_changed_on_Primary_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_cant_be_changed_on_Primary_Quote</fullName>
    <active>true</active>
    <description>Account cannot be changed on a Primary Quote</description>
    <errorConditionFormula>OR(
				AND(
ISCHANGED(SBQQ__Account__c),
SBQQ__Primary__c=true),
    AND(
								OR(
SBQQ__Account__c &lt;&gt; SBQQ__Opportunity2__r.Ship_To_Account__c,
Ship_To_Account__c &lt;&gt; SBQQ__Opportunity2__r.Ship_To_Account__c),
ISCHANGED(SBQQ__Primary__c)))</errorConditionFormula>
    <errorDisplayField>SBQQ__Account__c</errorDisplayField>
    <errorMessage>You cannot update the Account on a Primary Quote. Uncheck &quot;Primary&quot; on this Quote, update the Account on the Opportunity and click New Quote to create a new primary Quote record</errorMessage>
</ValidationRule>