FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/validationRules/Beta_Product_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Beta_Product_Approval</fullName>
    <active>false</active>
    <description>Doesnt allow the Submit for Approval button to be pressed unless there is a Discount given
BOPI-581 ByPass added to skip validations when syncing quote with account changes
BOPI-600 updated to prevent auto renewals from stopping</description>
    <errorConditionFormula>AND(
    Beta_Product_Discount__c &lt;&gt; 0 ,
    NOT(ISPICKVAL(SBQQ__Status__c , &apos;Draft&apos;)),
    NOT(ISPICKVAL(SBQQ__Opportunity2__r.Type, &apos;Renewal&apos;))
)
&amp;&amp; Quote_Val_Bypass__c = false</errorConditionFormula>
    <errorMessage>Please enter Discount for Beta Product</errorMessage>
</ValidationRule>