FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/validationRules/Cant_Modify_Quote_On_Closed_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Modify_Quote_On_Closed_Opp</fullName>
    <active>true</active>
    <description>BOPI-664 Prevent users from modifying quotes on closed opportunities</description>
    <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
    $Profile.Name &lt;&gt; &quot;B - Looker&quot;,
    $User.Alias &lt;&gt; &quot;Workato&quot;,
    SBQQ__Opportunity2__r.IsClosed,
    NOT(ISNEW())
)
&amp;&amp; Quote_Val_Bypass__c = false</errorConditionFormula>
    <errorMessage>Quotes cannot be modified on closed Opportunities</errorMessage>
</ValidationRule>