FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/validationRules/NS_Sub_Groups_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_Sub_Groups_Missing</fullName>
    <active>true</active>
    <description>Created for SALDEV-1073. Used to keep Amendment/Renewal Quotes from being saved if there is no NS Sub Groups combined value on the original contract.</description>
    <errorConditionFormula>OR(
AND(
ISBLANK(SBQQ__Opportunity2__r.SBQQ__AmendedContract__r.NS_Sub_Groups_Combined__c),
ISPICKVAL(SBQQ__Type__c, &quot;Amendment&quot;),
ISPICKVAL(SBQQ__Status__c, &quot;Client_Approved&quot;)),
AND(
NOT(ISPICKVAL(SBQQ__Opportunity2__r.Type, &quot;Auto Renewal&quot;)),
ISBLANK( SBQQ__Opportunity2__r.SBQQ__RenewedContract__r.NS_Sub_Groups_Combined__c),
ISPICKVAL(SBQQ__Type__c, &quot;Renewal&quot;),
ISPICKVAL(SBQQ__Status__c, &quot;Client_Approved&quot;)))</errorConditionFormula>
    <errorMessage>This Quote is missing a req System Field &quot;NS Sub Groups&quot;, please submit a Jira ticket with this error to your Salesforce Admin to resolve.</errorMessage>
</ValidationRule>