FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/validationRules/Quote_must_have_Primary_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_must_have_Primary_Contact</fullName>
    <active>true</active>
    <description>Created for SALDEV-1144</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
ISCHANGED(ApprovalStatus__c),
ISBLANK(SBQQ__PrimaryContact__c),
NOT(ISPICKVAL(SBQQ__Opportunity2__r.Type, &quot;Auto Renewal&quot;))
)</errorConditionFormula>
    <errorMessage>You must add a Primary Contact Role on the Opportunity before submitting for approval</errorMessage>
</ValidationRule>