FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/validationRules/Req_BillingContact_To_Submit_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_BillingContact_To_Submit_Approval</fullName>
    <active>false</active>
    <description>BOPI-592 The Billing contact is required before submitting for approval</description>
    <errorConditionFormula>AND(
    ISCHANGED(ApprovalStatus__c),
 SBQQ__Account__r.Has_Billing_Contact__c = false,
				NOT(ISPICKVAL(SBQQ__Opportunity2__r.Type, &quot;Auto Renewal&quot;))
)
&amp;&amp; Quote_Val_Bypass__c = false</errorConditionFormula>
    <errorMessage>You must have at least one Billing Contact related to the Account in order to submit for approval</errorMessage>
</ValidationRule>