FLY wire David/force-app/main/default/objects/SBQQ__Quote__c/listViews/My_Quotes.listView-meta.xml
<ListView>
    <fullName>My_Quotes</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Primary__c</columns>
    <columns>SBQQ__NetAmount__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>SBQQ__Opportunity2__c</columns>
    <columns>SBQQ__CustomerDiscount__c</columns>
    <columns>SBQQ__PartnerDiscount__c</columns>
    <columns>SubmittedDate__c</columns>
    <columns>SBQQ__Account__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Quotes</label>
</ListView>